# Tp

.github/workflows/: WeirdSpiritDream.yml
task2/: CMakeLists.txt
task2/A/: index.cpp  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  testing.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task5/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
task5/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
